--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "firebase": "^11.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
@@ -23,7 +24,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    
   },
   "eslintConfig": {
     "extends": [
